[package]
name = "sequencer_client"
version = "0.1.0"
edition = "2021"

[profile.release]
incremental = true
debug = true
lto = "fat"

[dependencies]
tungstenite = {version = "0.18.0", features = ["native-tls"] }
base64 = "0.20.0"
serde_json = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.159"
rlp = {path = "./rlp" }
hex = "0.4.3"
ethereum-types = "0.3"
url = "2.3.1"
crossbeam-channel = "0.5.7"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
ethers = "2.0.3"
